fixed spacing for every page

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -10,12 +10,15 @@
     margin: 0;
     padding: 0;
     background-color: #EDDEEF;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%; 
     background-image: url('./images/homepage.png');
     background-size: 105% 120%;
     background-position: center bottom;
     position: relative;
+    flex-direction: column; /* Stack children vertically */
+    justify-content: center; /* Center content vertically */
+    padding-bottom: 60px;
 }
 
 .container {
@@ -30,6 +33,7 @@
     font-weight: bold;
     color: rgb(0, 0, 0) ;
     margin-top: 4rem;
+    text-align: center;
 }
 
 /* Styles for the button */
