--- a/src/components/ModulesPage.css
+++ b/src/components/ModulesPage.css
@@ -11,6 +11,7 @@
 .tabs {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .tab-button {
